--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 ### Gradle ###
 .gradle
 build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+gradle/wrapper/gradle-wrapper.jar
+**/src/main/**/build/
+**/src/test/**/build/
 
 ### IntelliJ IDEA ###
 .idea
