--- a/1.0-start-writing-codes/kafka-core-consumer/src/main/resources/application.yml
+++ b/1.0-start-writing-codes/kafka-core-consumer/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 logging:
   pattern:
-    console: "[Kafka Core Consumer] %clr(%d{HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(---){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+    console: "[Kafka Core Consumer %t] %clr(%d{HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(---){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
 
 spring:
   main:
