Customize JSON Format

--- a/2.0-kafka-json-message/kafka-core-consumer/src/main/resources/application.yml
+++ b/2.0-kafka-json-message/kafka-core-consumer/src/main/resources/application.yml
@@ -9,4 +9,5 @@ spring:
     consumer:
       group-id: default-spring-consumer
       auto-offset-reset: earliest
-
+  jackson:
+    date-format: yyyy-MMM-dd
