--- a/2.0-kafka-json-message/kafka-core-consumer/build.gradle
+++ b/2.0-kafka-json-message/kafka-core-consumer/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 ext {
 	set("jacksonVersion", "2.15.2")
+	set("caffeineVersion", "3.1.6")
 }
 
 dependencies {
@@ -26,6 +27,8 @@ dependencies {
 	implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
 	implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
 	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
+
+	implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
