--- a/4.0-kafka-microservice/kafka-ms-order/build.gradle
+++ b/4.0-kafka-microservice/kafka-ms-order/build.gradle
@@ -15,10 +15,15 @@ repositories {
 	mavenCentral()
 }
 
+ext{
+	set("apacheCommonsLang3Version", "3.12.0")
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation "org.apache.commons:commons-lang3:${apacheCommonsLang3Version}"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
