update after pb git

--- a/4.0-kafka-microservice/kafka-ms-reward/src/main/resources/application.yml
+++ b/4.0-kafka-microservice/kafka-ms-reward/src/main/resources/application.yml
@@ -26,4 +26,4 @@ spring:
         spring:
           json:
             trusted:
-              packages: com.course.kafka.broker.message
+              packages: com.guru.kafka.broker.message
