--- a/4.0-kafka-microservice/kafka-ms-pattern/src/main/resources/application.yml
+++ b/4.0-kafka-microservice/kafka-ms-pattern/src/main/resources/application.yml
@@ -24,4 +24,4 @@ spring:
         spring:
           json:
             trusted:
-              packages: com.course.kafka.broker.message
+              packages: com.guru.kafka.broker.message
