--- a/4.0-kafka-microservice/kafka-ms-storage/src/main/resources/application.yml
+++ b/4.0-kafka-microservice/kafka-ms-storage/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
         spring:
           json:
             trusted:
-              packages: com.course.kafka.broker.message
+              packages: com.guru.kafka.broker.message
             value:
               default:
                 type: java.lang.Object
