Kafka Consumer: get Header from kafka Order message

--- a/4.0-kafka-microservice/kafka-ms-storage/build.gradle
+++ b/4.0-kafka-microservice/kafka-ms-storage/build.gradle
@@ -15,9 +15,14 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set("caffeineVersion", "3.1.6")
+}
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+
+	implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
