--- a/5.0-kafka-stream/kafka-stream-storage/build.gradle
+++ b/5.0-kafka-stream/kafka-stream-storage/build.gradle
@@ -16,18 +16,13 @@ repositories {
 }
 
 ext {
-	set("apacheCommonsLang3Version", "3.12.0")
-	set('jacksonVersion', "2.15.2")
+	set("caffeineVersion", "3.1.6")
 }
-
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.apache.kafka:kafka-streams'
-
-	implementation "org.apache.commons:commons-lang3:${apacheCommonsLang3Version}"
-	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
-
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+
+	implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
